prev spacing fix didnt work live

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ a:visited{ color: gray }
         font-size: 1rem;
     }
 
-    .navbar-expand-lg {
+    .navbar {
         margin-top: 2rem;
     }
 }
